# weder

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: version.h.in
src/: CMakeLists.txt  config.cpp  config.h  data.cpp  data.h  forecast.cpp  forecast.h  http_weather_api.cpp  http_weather_api.h  main.cpp  weather_api.h
src/commands/: console_output.h  current_command.cpp  current_command.h  help_command.cpp  help_command.h  output.h  version_command.cpp  version_command.h
test/: CMakeLists.txt  commands_tests.cpp  data_tests.cpp  string_output.h  tests.cpp
test/data/: factory.h  fake_forecast.cpp
test/helpers/: factory.cpp  factory.h  fake_forecast.cpp  fake_forecast.h  string_output.h
